test/conformance/chainsaw/exceptions/exclude-running-as-nonroot/pod-allowed-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-1
  namespace: default
spec:
  containers:
  - name: nginx1
    image: public.ecr.aws/docker/library/nginx
    args:
    - sleep
    - 1d
    securityContext:
      seccompProfile:
        type: RuntimeDefault
      runAsNonRoot: true
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
  initContainers:
  - name: nginx2
    image: public.ecr.aws/docker/library/nginx
    args:
    - sleep
    - 1d
    securityContext:
      seccompProfile:
        type: RuntimeDefault
      runAsNonRoot: true
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
