test/conformance/chainsaw/exceptions/exclude-running-as-nonroot/pod-rejected-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-1
  namespace: staging-ns
spec:
  containers:
  - name: nginx1
    image: nginx
    args:
    - sleep
    - 1d
    securityContext:
      seccompProfile:
        type: RuntimeDefault
      runAsNonRoot: false
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
  initContainers:
  - name: nginx2
    image: nginx
    args:
    - sleep
    - 1d
    securityContext:
      seccompProfile:
        type: RuntimeDefault
      runAsNonRoot: false
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
