test/conformance/chainsaw/exceptions/exclude-running-as-nonroot/pod-rejected-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-2
  namespace: staging-ns
spec:
  containers:
  - name: busybox1
    image: busybox
    args:
    - sleep
    - 1d
    securityContext:
      seccompProfile:
        type: RuntimeDefault
      runAsNonRoot: false
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
